--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>kikerGame</groupId>
+    <groupId>ru.atc.amsir</groupId>
     <artifactId>KikerGame</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
 
     <properties>
         <start-class>ru.game.Kiker.Application</start-class>
