--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.atc.amsir</groupId>
+    <groupId>ru.game.kiker</groupId>
     <artifactId>KikerGame</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
     <properties>
-        <start-class>ru.game.Kiker.Application</start-class>
+        <start-class>ru.game.kiker.Application</start-class>
     </properties>
 
     <!-- Parent information -->
@@ -60,14 +60,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>7</source>
-                    <target>7</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
