--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.profiles.active=development
 server.port=8099
 
 # EMBEDDED SERVER CONFIGURATION
-server.contextPath=/api
+server.contextPath=${context_path}
 
 #Rest config
-kiker.route.score=score
-temp.var = LOH
+kiker.route.score=${route_score}
+temp.var = ${var}
