--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
     <version>1.0</version>
     <packaging>jar</packaging>
 
+    <!-- Properties information -->
+    <properties>
+        <firebase-admin.version>6.8.1</firebase-admin.version>
+        <gson.version>2.8.5</gson.version>
+    </properties>
+
     <!-- Parent information -->
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -18,17 +24,19 @@
 
     <!-- Dependency information -->
     <dependencies>
-        <!-- SPRINGBOOT -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-        <!--FireBaase-->
         <dependency>
             <groupId>com.google.firebase</groupId>
             <artifactId>firebase-admin</artifactId>
-            <version>6.8.1</version>
+            <version>${firebase-admin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
     </dependencies>
 
@@ -54,7 +62,6 @@
                                     <destFileName>webapp-runner.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
-
                         </configuration>
                     </execution>
                 </executions>
