--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,15 @@ server.contextPath=${context_path}
 #Rest config
 kiker.route.score=${route_score}
 temp.var = ${var}
+
+#Config FireBase
+firebase.type=${firebase_type}
+firebase.projectId=${firebase_projectId}
+firebase.privateKeyId=${firebase_privateKeyId}
+firebase.privateKey=${firebase_privateKey}
+firebase.clientEmail=${firebase_clientEmail}
+firebase.clientId=${firebase_clientId}
+firebase.authUri=${firebase_authUri}
+firebase.tokenUri=${firebase_tokenUri}
+firebase.authProvider=${firebase_authProvider}
+firebase.client=${firebase_client}
