main logic for increment updates goals

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.contextPath=${context_path}
 
 #Rest config
 kiker.route.score=${route_score}
-temp.var = ${var}
+kiker.route.game=${route_game}
 
 #Config FireBase
 firebase.type=${firebase_type}
