--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <firebase-admin.version>6.8.1</firebase-admin.version>
         <gson.version>2.8.5</gson.version>
         <joda.version>2.10.2</joda.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <!-- Parent information -->
@@ -43,6 +44,11 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${joda.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
         </dependency>
     </dependencies>
 
